--- a/.env.test
+++ b/.env.test
@@ -11,6 +11,7 @@ BETTING_URL='http://localhost:4042'
 BETTING_PORT=4042
 
 # DATABASE CONTAINER SETTINGS
-BETTING_MONGO_HOST='mongodb://localhost/bettingdb'
+# BETTING_MONGO_HOST='mongodb://localhost/bettingdb'
+BETTING_MONGO_HOST='mongodb://localhost/authenticationdb'
 BETTING_MONGO_PORT=27017
 BETTING_MONGOOSE_DEBUG=false
