Modify .env file

--- a/.env.test
+++ b/.env.test
@@ -1,6 +1,7 @@
 # APP SETTINGS
 NODE_ENV='development'
-JWT_SECRET='0a6b944d-d2fb-46fc-a85e-0295c986cd9f'
+# JWT_SECRET Must be same as Auth Service
+JWT_SECRET='nYnb3JIVNXdegx1yeA9LewXM8gDuFj1m'
 DEBUG='betting:*'
 
 # APP URLS
